# uamp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  lol.m3u.m3u  myDb.db  uamp  ui_dtagmusic.h  ui_generalwindow.h  ui_musiclist.h  ui_musicwidget.h  ui_playlist.h  ui_playmusic.h  ui_windowsetting.h
3dparty/: CMakeLists.txt
3dparty/taglib/examples/: tagreader.cpp
3dparty/taglib/taglib/: fileref.h
app/: CMakeLists.txt  database.h  dtagmusic.cpp  dtagmusic.h  dtagmusic.ui  generalwindow.cpp  generalwindow.h  generalwindow.ui  main.cpp  musiclist.cpp  musiclist.h  musiclist.ui  musicwidget.cpp  musicwidget.h  musicwidget.ui  mytreewidgetitem.h  playlist.cpp  playlist.h  playlist.ui  playmusic.cpp  playmusic.h  playmusic.ui  radio.cpp  radio.h  radio.ui  stylesheet.qss  uamp.pro  windowsetting.cpp  windowsetting.h  windowsetting.ui
app/src/: CMakeLists.txt  dtagmusic.cpp  dtagmusic.h  dtagmusic.ui  generalwindow.cpp  generalwindow.h  musiclist.h  musiclist.ui  musicwidget.h  mytreewidgetitem.h  playlist.cpp  playmusic.cpp  playmusic.h  radio.cpp  radio.h  radio.ui  windowsetting.ui
uamp/: dtagmusic.ui  generalwindow.cpp  generalwindow.h  main.cpp  musiclist.cpp  musiclist.h  musiclist.ui  musicwidget.cpp  musicwidget.h  musicwidget.ui  playmusic.cpp  playmusic.cpp.autosave  playmusic.h  playmusic.ui  queuelist.cpp  queuelist.ui  stylesheet.qss  uamp.pro
